Stereo 3D anaglyph and interlace not working #74964

Closed
opened 2020-03-20 11:16:10 +01:00 by Dalai Felinto · 15 comments

System Information
Operating system: Linux-5.3.0-42-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59

system-info.txt

Blender Version
Broken: version: 2.83 (sub 10), branch: master, commit date: 2020-03-19 21:12, hash: d2c3544c5c
Worked: 2.82

Short description of error
In the image editor or in the viewport if you use multi-view stereo images it doesn't show it as stereo. (it always only show one eye)

Exact steps for others to reproduce the error

  • Open this file with the Balls.exr in the same folder.
  • It should show the image as a reference image in stereo 3d in the viewport.

exr-image.blend

Balls.exr

Here I get:

image.png

**System Information** Operating system: Linux-5.3.0-42-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59 [system-info.txt](https://archive.blender.org/developer/F8424591/system-info.txt) **Blender Version** Broken: version: 2.83 (sub 10), branch: master, commit date: 2020-03-19 21:12, hash: `d2c3544c5c` Worked: 2.82 **Short description of error** In the image editor or in the viewport if you use multi-view stereo images it doesn't show it as stereo. (it always only show one eye) **Exact steps for others to reproduce the error** * Open this file with the Balls.exr in the same folder. * It should show the image as a reference image in stereo 3d in the viewport. [exr-image.blend](https://archive.blender.org/developer/F8417476/exr-image.blend) ![Balls.exr](https://archive.blender.org/developer/F8417477/Balls.exr) Here I get: ![image.png](https://archive.blender.org/developer/F8417479/image.png)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Owner

Same on windows:
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Same on windows: Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

I see stereoscopy when using

I see mono when using Linux Intel GPU.

I see stereoscopy when using * Linux AMD Vega 64 [system-info.txt](https://archive.blender.org/developer/F8417527/system-info.txt) * Windows Intel GPU (10gen) I see mono when using Linux Intel GPU. * Linux Intel [system-info.txt](https://archive.blender.org/developer/F8417528/system-info.txt)
Jeroen Bakker self-assigned this 2020-03-20 12:02:23 +01:00

This issue was referenced by 46c0da6e69

This issue was referenced by 46c0da6e69c38973e5616bb0a0f7f2ff7b43d5fa
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Member

Reopening as it still fails on @dfelinto's system

Reopening as it still fails on @dfelinto's system

Added subscriber: @fclem

Added subscriber: @fclem

I have a gl error about incorrect framebuffer. Make sure the framebuffer is created and used in only one context only.

/home/clement/Blender/build_linux/bin/blender(BLI_system_backtrace+0x33) [0x55d1464eb533]
/home/clement/Blender/build_linux/bin/blender(+0x190775a) [0x55d1463f475a]
/usr/lib/libnvidia-glcore.so.435.21(+0xa7a378) [0x7f1ffb58f378]
/usr/lib/libnvidia-glcore.so.435.21(+0xa7a4c0) [0x7f1ffb58f4c0]
/usr/lib/libnvidia-glcore.so.435.21(+0xa7a782) [0x7f1ffb58f782]
/usr/lib/libnvidia-glcore.so.435.21(+0xa83d05) [0x7f1ffb598d05]
/usr/lib/libnvidia-glcore.so.435.21(+0xa83f4d) [0x7f1ffb598f4d]
/usr/lib/libnvidia-glcore.so.435.21(+0xa8697c) [0x7f1ffb59b97c]
/home/clement/Blender/build_linux/bin/blender(GPU_framebuffer_bind+0x43) [0x55d1463e12d3]
/home/clement/Blender/build_linux/bin/blender(GPU_viewport_stereo_composite+0x62) [0x55d1463f3b82]
/home/clement/Blender/build_linux/bin/blender(wm_draw_update+0x867) [0x55d14584a7a7]
/home/clement/Blender/build_linux/bin/blender(WM_main+0x30) [0x55d145848400]
/home/clement/Blender/build_linux/bin/blender(main+0x30c) [0x55d14568be0c]
/usr/lib/libc.so.6(__libc_start_main+0xf3) [0x7f2007bdb023]
/home/clement/Blender/build_linux/bin/blender(_start+0x2e) [0x55d14568ed9e]```
I have a gl error about incorrect framebuffer. Make sure the framebuffer is created and used in only one context only. ```GL API error: GL_INVALID_OPERATION error generated. Object is owned by another context and may not be bound here. /home/clement/Blender/build_linux/bin/blender(BLI_system_backtrace+0x33) [0x55d1464eb533] /home/clement/Blender/build_linux/bin/blender(+0x190775a) [0x55d1463f475a] /usr/lib/libnvidia-glcore.so.435.21(+0xa7a378) [0x7f1ffb58f378] /usr/lib/libnvidia-glcore.so.435.21(+0xa7a4c0) [0x7f1ffb58f4c0] /usr/lib/libnvidia-glcore.so.435.21(+0xa7a782) [0x7f1ffb58f782] /usr/lib/libnvidia-glcore.so.435.21(+0xa83d05) [0x7f1ffb598d05] /usr/lib/libnvidia-glcore.so.435.21(+0xa83f4d) [0x7f1ffb598f4d] /usr/lib/libnvidia-glcore.so.435.21(+0xa8697c) [0x7f1ffb59b97c] /home/clement/Blender/build_linux/bin/blender(GPU_framebuffer_bind+0x43) [0x55d1463e12d3] /home/clement/Blender/build_linux/bin/blender(GPU_viewport_stereo_composite+0x62) [0x55d1463f3b82] /home/clement/Blender/build_linux/bin/blender(wm_draw_update+0x867) [0x55d14584a7a7] /home/clement/Blender/build_linux/bin/blender(WM_main+0x30) [0x55d145848400] /home/clement/Blender/build_linux/bin/blender(main+0x30c) [0x55d14568be0c] /usr/lib/libc.so.6(__libc_start_main+0xf3) [0x7f2007bdb023] /home/clement/Blender/build_linux/bin/blender(_start+0x2e) [0x55d14568ed9e]```

Added subscriber: @ZsoltStefan

Added subscriber: @ZsoltStefan

I just wanted to report the same bug, and then found it here. I have:

Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19
Broken: version: 2.83 (sub 12), branch: master, commit date: 2020-04-07 11:44, hash: 6feeede47f

I just wanted to report the same bug, and then found it here. I have: Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 Broken: version: 2.83 (sub 12), branch: master, commit date: 2020-04-07 11:44, hash: `6feeede47f`
Jeroen Bakker was unassigned by Dalai Felinto 2020-04-15 13:52:27 +02:00
Clément Foucault was assigned by Dalai Felinto 2020-04-15 13:52:27 +02:00

This issue was referenced by 2a68b41b7d

This issue was referenced by 2a68b41b7df18299952f83f4499fa132c7141a1e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74964
No description provided.